// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getTSDocs should generate AST documentation structure 1`] = `
"- Comment
  - Section
    - Paragraph
      - PlainText
        * PlainText="Adds two numbers together"
      - SoftBreak
        * SoftBreak="\\n"
  - ParamCollection
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="a"
      * Spacing=" "
      * ParamBlock_Hyphen="-"
      * Spacing=" "
      - Section
        - Paragraph
          - PlainText
            * PlainText="First number"
          - SoftBreak
            * SoftBreak="\\n"
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="b"
      * Spacing=" "
      * ParamBlock_Hyphen="-"
      * Spacing=" "
      - Section
        - Paragraph
          - PlainText
            * PlainText="Second number"
          - SoftBreak
            * SoftBreak="\\n"
  - Block
    - BlockTag
      * BlockTag="@returns"
    - Section
      - Paragraph
        - PlainText
          * PlainText=" The sum of a and b"
        - SoftBreak
          * SoftBreak="\\n"
  - Block
    - BlockTag
      * BlockTag="@example"
    - Section
      - Paragraph
        - SoftBreak
          * SoftBreak="\\n"
      - FencedCode
        * FencedCode_OpeningFence="\`\`\`"
        * FencedCode_Language="ts"
        * Spacing="\\n"
        * FencedCode_Code="add(1, 2) // returns 3\\n"
        * Spacing=""
        * FencedCode_ClosingFence="\`\`\`"
        * Spacing="\\n""
`;

exports[`getTSDocs should handle functions with deprecated tag 1`] = `
"- Comment
  - Section
    - Paragraph
      - PlainText
        * PlainText="Old method for adding numbers"
      - SoftBreak
        * SoftBreak="\\n"
  - Block
    - BlockTag
      * BlockTag="@deprecated"
    - Section
      - Paragraph
        - PlainText
          * PlainText=" Use add() instead"
        - SoftBreak
          * SoftBreak="\\n"
  - ParamCollection
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="a"
      * Spacing=" "
      * ParamBlock_Hyphen="-"
      * Spacing=" "
      - Section
        - Paragraph
          - PlainText
            * PlainText="First number"
          - SoftBreak
            * SoftBreak="\\n"
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="b"
      * Spacing=" "
      * ParamBlock_Hyphen="-"
      * Spacing=" "
      - Section
        - Paragraph
          - PlainText
            * PlainText="Second number"
          - SoftBreak
            * SoftBreak="\\n"
  - Block
    - BlockTag
      * BlockTag="@returns"
    - Section
      - Paragraph
        - PlainText
          * PlainText=" Sum"
        - SoftBreak
          * SoftBreak="\\n""
`;

exports[`getTSDocs should handle optional parameters 1`] = `
"- Comment
  - Section
    - Paragraph
      - PlainText
        * PlainText="Greets a person"
      - SoftBreak
        * SoftBreak="\\n"
  - ParamCollection
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="name"
      * Spacing=" "
      * ParamBlock_Hyphen="-"
      * Spacing=" "
      - Section
        - Paragraph
          - PlainText
            * PlainText="Person's name"
          - SoftBreak
            * SoftBreak="\\n"
    - ParamBlock
      - BlockTag
        * BlockTag="@param"
      * Spacing=" "
      * ParamBlock_ParameterName="title"
      - Section
        - Paragraph
          - PlainText
            * PlainText="? - Optional title"
          - SoftBreak
            * SoftBreak="\\n"
  - Block
    - BlockTag
      * BlockTag="@returns"
    - Section
      - Paragraph
        - PlainText
          * PlainText=" Greeting message"
        - SoftBreak
          * SoftBreak="\\n""
`;
